Tema pt Acasa 5
Tranzitii si Animatii

--- a/portfolio.html
+++ b/portfolio.html
@@ -1,23 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Portfolio</title>
+    <title>Studio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,800;1,800&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css"
+    />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <div class="page-wrapper">
       <!-- Header: Navigation bar -->
       <header class="header">
-        <div class="container-row">
+        <div class="container-row position-sticky">
           <div class="logo">
             <a href="/index.html"><span class="logo-text">Web</span>Studio</a>
           </div>
           <nav>
             <ul class="navigation">
               <li><a href="/index.html" class="nav-link">Studio</a></li>
-              <li><a href="/portfolio.html" class="nav-link">Portfolio</a></li>
+              <li>
+                <a href="/portfolio.html" class="nav-link active">Portfolio</a>
+              </li>
               <li><a class="nav-link">Contacts</a></li>
             </ul>
           </nav>
@@ -69,99 +86,180 @@
         <section class="section project-section">
           <div class="our-team-cards">
             <div class="project-card card">
-              <img
-                src="./images/banking-app.jpg"
-                alt="Banking App Interface Design Concept in purple"
-                width="360"
-              />
+              <div class="image-holder">
+                <img
+                  src="./images/banking-app.jpg"
+                  alt="Banking App Interface Design Concept in purple"
+                  width="360"
+                />
+                <div class="project-description">
+                  <p class="text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
+              </div>
               <div class="body">
                 <h3 class="title-h3">Banking App Interface Concept</h3>
                 <p class="text">App</p>
               </div>
             </div>
             <div class="card project-card">
-              <img
-                src="./images/cashless-payment.jpg"
-                alt="Payment made by cellphone"
-                width="360"
-              />
+              <div class="image-holder">
+                <img
+                  src="./images/cashless-payment.jpg"
+                  alt="Banking App Interface Design Concept in purple"
+                  width="360"
+                />
+                <div class="project-description">
+                  <p class="text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
+              </div>
               <div class="body">
                 <h3 class="title-h3">Cashless Payment</h3>
                 <p class="text">Marketing</p>
               </div>
             </div>
             <div class="card project-card">
-              <img
-                src="./images/meditation-app.jpg"
-                alt="Laptop and Cellphone with ambient design"
-                width="360"
-              />
+              <div class="image-holder">
+                <img
+                  src="./images/meditation-app.jpg"
+                  alt="Banking App Interface Design Concept in purple"
+                  width="360"
+                />
+                <div class="project-description">
+                  <p class="text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
+              </div>
               <div class="body">
                 <h3 class="title-h3">Meditation App</h3>
                 <p class="text">App</p>
               </div>
             </div>
             <div class="card project-card">
-              <img
-                src="./images/taxi-service.jpg"
-                alt="Driver holding a car wheel"
-                width="360"
-              />
+              <div class="image-holder">
+                <img
+                  src="./images/taxi-service.jpg"
+                  alt="Banking App Interface Design Concept in purple"
+                  width="360"
+                />
+                <div class="project-description">
+                  <p class="text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
+              </div>
               <div class="body">
                 <h3 class="title-h3">Taxi Service</h3>
                 <p class="text">Marketing</p>
               </div>
             </div>
             <div class="card project-card">
-              <img
-                src="./images/screen-illustrations.jpg"
-                alt="Cellphone theme illustration ideas"
-                width="360"
-              />
+              <div class="image-holder">
+                <img
+                  src="./images/screen-illustrations.jpg"
+                  alt="Banking App Interface Design Concept in purple"
+                  width="360"
+                />
+                <div class="project-description">
+                  <p class="text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
+              </div>
               <div class="body">
                 <h3 class="title-h3">Screen Illustrations</h3>
                 <p class="text">Design</p>
               </div>
             </div>
             <div class="card project-card">
-              <img
-                src="./images/online-courses.jpg"
-                alt="Smiling woman listening to online courses on her phone"
-                width="360"
-              />
+              <div class="image-holder">
+                <img
+                  src="./images/online-courses.jpg"
+                  alt="Banking App Interface Design Concept in purple"
+                  width="360"
+                />
+                <div class="project-description">
+                  <p class="text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
+              </div>
               <div class="body">
                 <h3 class="title-h3">Online Courses</h3>
                 <p class="text">Marketing</p>
               </div>
             </div>
             <div class="card project-card">
-              <img
-                src="./images/instagram-stories-concept.jpg"
-                alt="Different design layouts for Instagram Stories"
-                width="360"
-              />
+              <div class="image-holder">
+                <img
+                  src="./images/instagram-stories-concept.jpg"
+                  alt="Banking App Interface Design Concept in purple"
+                  width="360"
+                />
+                <div class="project-description">
+                  <p class="text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
+              </div>
               <div class="body">
                 <h3 class="title-h3">Instagram Stories Concept</h3>
                 <p class="text">Design</p>
               </div>
             </div>
             <div class="card project-card">
-              <img
-                src="./images/organic-food.jpg"
-                alt="A woman holding a recycable bag with organic fruits and vegetables in it"
-                width="360"
-              />
+              <div class="image-holder">
+                <img
+                  src="./images/organic-food.jpg"
+                  alt="Banking App Interface Design Concept in purple"
+                  width="360"
+                />
+                <div class="project-description">
+                  <p class="text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
+              </div>
               <div class="body">
                 <h3 class="title-h3">Organic Food</h3>
                 <p class="text">Web Site</p>
               </div>
             </div>
             <div class="card project-card">
-              <img
-                src="./images/fresh-coffe.jpg"
-                alt="Barista doing latte-art in a cup of coffe"
-                width="360"
-              />
+              <div class="image-holder">
+                <img
+                  src="./images/fresh-coffe.jpg"
+                  alt="Banking App Interface Design Concept in purple"
+                  width="360"
+                />
+                <div class="project-description">
+                  <p class="text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
+              </div>
               <div class="body">
                 <h3 class="title-h3">Fresh Coffee</h3>
                 <p class="text">Web Site</p>
@@ -228,5 +326,6 @@
         </div>
       </footer>
     </div>
+    <script src="./js/modal.js"></script>
   </body>
 </html>
