--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
           </div>
           <nav>
             <ul class="navigation">
-              <li><a href="/index.html" class="nav-link">Studio</a></li>
+              <li><a href="/index.html" class="nav-link active">Studio</a></li>
               <li><a href="portfolio.html" class="nav-link">Portfolio</a></li>
               <li><a class="nav-link">Contacts</a></li>
             </ul>
@@ -55,7 +55,11 @@
         <section class="hero">
           <div class="container-column">
             <h1 class="title">Effective Solutions for Your Business</h1>
-            <button type="button" class="order-button button-text">
+            <button
+              type="button"
+              class="order-button button-text"
+              data-modal-open
+            >
               Order Service
             </button>
           </div>
@@ -117,7 +121,7 @@
         </section>
         <!-- Section: What are we doing -->
         <section class="section section-padding">
-          <div class="container-column">
+          <div class="container-column position">
             <h2 class="title-h2">What are we doing</h2>
             <div class="our-team-cards">
               <img src="./images/website.jpg" alt="Website on PC" width="376" />
@@ -510,5 +514,14 @@
         </div>
       </footer>
     </div>
+    <div class="modal is-hidden" data-modal>
+      <div class="modal-content">
+        <button class="close-btn" data-modal-close>
+          <span class="close">&times;</span>
+        </button>
+        Continut modal
+      </div>
+    </div>
+    <script src="./js/modal.js"></script>
   </body>
 </html>
